# phylo_simulator

./: .gitignore  README.md  pyproject.toml  requirements.txt
sample_config/: generation.json  generation.yaml
src/: __init__.py
src/data_generation/: __init__.py  __main__.py  config.py  tree_sequence_generator.py  verify.py  verify_sequences.py
src/utils/: __init__.py  formatting.py  labels.py  phylo.py
src/xml_parser/: __init__.py  __main__.py  base.py  extractor.py  parser.py
src/xml_parser/writers/: __init__.py  base.py  npy_writer.py
tests/: conftest.py  test_data_generation.py  test_xml_parser.py
